Final de sesion02_

--- a/sesion02/js-vanilla-calc/src/index.html
+++ b/sesion02/js-vanilla-calc/src/index.html
@@ -10,9 +10,34 @@
 </head>
 
 <body>
-	<h1>Hello World</h1>
-	<h2>JS Bootcamp 2020</h2>
-  <script scr="js/script.js"></script>
+
+	<section class="container">
+		<h1>Calculadora</h1>
+		<h2>JS Bootcamp 2020_</h2>
+		<main>
+			<section>
+				<p></p>
+				<input type="text" name="primer-numero" id="primer-numero" 
+				placeholder="num 1">
+			</section>
+			<section>
+				<p></p>
+				<input type="text" name="segundo-numero" id="segundo-numero"
+				placeholder="num 2">
+			</section>
+			<section>
+				<button id="sum-button">+</button>
+				<button id="diff-button">-</button>
+				<button id="prod-button">*</button>
+				<button id="div-button">/</button>
+			</section>
+			<section id="result">
+				<p>El resultado es: </p>
+			</section>
+		</main>
+	</section>	
+
+  <script src="js/script.js"></script>
 </body>
 
 </html>
