--- a/sesion02/js-vanilla-calc/src/index.html
+++ b/sesion02/js-vanilla-calc/src/index.html
@@ -2,28 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-	<meta name="viewport" 
-	content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+	<title>JS Bootcamp</title>
 </head>
 
 <body>
 
 	<section class="container">
 		<h1>Calculadora</h1>
-		<h2>JS Bootcamp 2020_</h2>
+		<h2>JS Bootcamp 2020</h2>
 		<main>
 			<section>
-				<p></p>
-				<input type="text" name="primer-numero" id="primer-numero" 
-				placeholder="num 1">
+				<input type="text" name="primer-numero" id="primer-numero" placeholder="num 1">
 			</section>
 			<section>
-				<p></p>
-				<input type="text" name="segundo-numero" id="segundo-numero"
-				placeholder="num 2">
+				<input type="text" name="segundo-numero" id="segundo-numero" placeholder="num 2">
 			</section>
 			<section>
 				<button id="sum-button">+</button>
@@ -35,9 +30,9 @@
 				<p>El resultado es: </p>
 			</section>
 		</main>
-	</section>	
+	</section>
 
-  <script src="js/script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
