[add]bulma config

--- a/sesion04/getting-started-winth-webpack/src/index.html
+++ b/sesion04/getting-started-winth-webpack/src/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Getting started with webpack</h1>
+    <h3>
+        <i class="fab fa-node"></i>
+        <i class="fab fa-font-awesome-flag"></i>
+        <i class="fab fa2-sass"></i>
+    </h3>
 </body>
 </html>
