[add] bulma elements until card

--- a/sesion05/bulma-playground/src/index.html
+++ b/sesion05/bulma-playground/src/index.html
@@ -9,13 +9,292 @@
 </head>
 
 <body>
-  <section class="container">
-    <section class="block">
-      <h1 class="title">Hello world</h1>
-      <h2 class="subtitle">H2 Hello world</h2>
-    </section>
-    
+  <main class="container">
+    <!-- Heading -->
+    <aside class="block">
+      <!-- Title / subtitle -->
+      <h1 class="title">H1 Title</h1>
+      <h2 class="subtitle">H2 Subtitle</h2>
+      <!-- sizes -->
+      <h1 class="title is-1">H1 Title is-1</h1>
+      <h6 class="title is-1">H6 Title is-1</h6>
+      
+      <h2 class="title is-2">Title is-2</h2>
+      <h3 class="title is-3">Title is-3</h3>
+      <h4 class="title is-4">Title is-4</h4>
+      <h5 class="title is-5">Title is-5</h5>
+      <h6 class="title is-6">Title is-6</h6>
+    </aside>
+    <!--Content-->
+    <aside class="block">
+      <p class="content is-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, reprehenderit voluptatibus doloribus voluptas repellendus sequi modi quia similique cum. Provident eum omnis magni eveniet repellendus vero harum dolorem nulla quia.</p>
+      <p class="content is-medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, reprehenderit voluptatibus doloribus voluptas repellendus sequi modi quia similique cum. Provident eum omnis magni eveniet repellendus vero harum dolorem nulla quia.</p>
+      <p class="content is-large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, reprehenderit voluptatibus doloribus voluptas repellendus sequi modi quia similique cum. Provident eum omnis magni eveniet repellendus vero harum dolorem nulla quia.</p>
+    </aside>
+    <!--buttons-->
+    <aside>
+      <button>button</button>
+      <button class="button">button</button>
+      <button class="button is white">button</button>
+      <button class="button is-light">button</button>
+      <button class="button is-dark">button</button>
+      <button class="button is-black">button</button>
+      <button class="button is-link">button</button>
+    </aside>
+    <!-- info temperature -->
+    <aside class="is-block">
+      <button class="button is-primary">button</button>
+      <button class="button is-info">button</button>
+      <button class="button is-success">button</button>
+      <button class="button is-warning">button</button>
+      <button class="button is-danger">button</button>
+    </aside>
+   <!-- color inverted-->
+   <aside class="is-block">
+    <button class="button is-primary is-inverted">button</button>
+    <button class="button is-info is-inverted">button</button>
+    <button class="button is-success is-inverted">button</button>
+    <button class="button is-warning is-inverted">button</button>
+    <button class="button is-danger is-inverted">button</button>
+  </aside>
+  <!-- anchor as button -->
+  <!-- button: action (function)-->
+  <!-- anchor: link -->
+  <aside class="is-block">
+    <a class="button is-info is-small">anchor</a>
+    <a class="button is-success is-medium">anchor</a>
+    <a class="button is-danger is-large">anchor</a>
+  </aside>
+  <!-- status -->
+  <aside class="is-block">
+    <button class="button is-hovered">button</button>
+    <button class="button is-focused">button</button>
+    <button class="button is-active">button</button>
+    <button class="button is-loading">button</button>
+    <button class="button" disabled>button</button>
+  </aside>
+  <!-- box -->
+  <aside>
+    <div class="box">
+      <h3 class="title">Box title</h3>
+      <p class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quasi dicta quam, magni deleniti quia repudiandae accusamus minima necessitatibus laborum porro illum! Nostrum necessitatibus accusamus fugit iusto incidunt, dignissimos sapiente!</p>
+    </div>
+  </aside>
+   <!-- Notifications -->
+   <aside class="is-block">
+    <div class="notification">
+      <button class="delete"></button>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nesciunt ex enim facere quo debitis minus, sunt tenetur, aspernatur, ipsa aperiam rerum totam saepe odio similique voluptatibus doloribus delectus provident.
+    </div>
+    <div class="notification is-primary">
+      <button class="delete"></button>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nesciunt ex enim facere quo debitis minus, sunt tenetur, aspernatur, ipsa aperiam rerum totam saepe odio similique voluptatibus doloribus delectus provident.
+    </div>
+    <div class="notification is-info">
+      <button class="delete"></button>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nesciunt ex enim facere quo debitis minus, sunt tenetur, aspernatur, ipsa aperiam rerum totam saepe odio similique voluptatibus doloribus delectus provident.
+    </div>
+    <div class="notification is-warning">
+      <button class="delete"></button>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nesciunt ex enim facere quo debitis minus, sunt tenetur, aspernatur, ipsa aperiam rerum totam saepe odio similique voluptatibus doloribus delectus provident.
+    </div>
+    <div class="notification is-danger">
+      <button class="delete"></button>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nesciunt ex enim facere quo debitis minus, sunt tenetur, aspernatur, ipsa aperiam rerum totam saepe odio similique voluptatibus doloribus delectus provident.
+    </div>
+  </aside>
+  <!-- Tag -->
+  <aside>
+    <span class="tag">tag</span>
+   <!-- by color -->
+   <section>
+    <span class="tag is-black">color tag</span>
+    <span class="tag is-dark">color tag</span>
+    <span class="tag is-light">color tag</span>
+    <span class="tag is-white">color tag</span>
   </section>
+  <!-- by temperature -->
+  <section>
+    <span class="tag is-primary">temperature tag</span>
+    <span class="tag is-info">temperature tag</span>
+    <span class="tag is-success">temperature tag</span>
+    <span class="tag is-warning">temperature tag</span>
+    <span class="tag is-danger">temperature tag</span>
+  </section>
+  <!-- by size -->
+  <section>
+    <span class="tag is-primary is-small">size tag</span>
+    <span class="tag is-success is-medium">size tag</span>
+    <span class="tag is-danger is-large">size tag</span>
+  </section>
+  </aside>
+  <!-- Message -->
+    <aside class="is-block">
+      <!-- simple message -->
+      <article class="message">
+        <div class="message-header">
+          <p>Message header</p>
+        </div>
+        <div class="message-body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam vero deleniti ab beatae nam illo deserunt odio reiciendis error sit, incidunt aliquam nostrum consectetur alias ratione aperiam harum quaerat ipsam?
+        </div>
+      </article>
+      <!-- by temperature -->
+      <article class="message is-primary">
+        <div class="message-header">
+          <p>Message header</p>
+        </div>
+        <div class="message-body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam vero deleniti ab beatae nam illo deserunt odio reiciendis error sit, incidunt aliquam nostrum consectetur alias ratione aperiam harum quaerat ipsam?
+        </div>
+      </article>
+      <article class="message is-info">
+        <div class="message-header">
+          <p>Message header</p>
+        </div>
+        <div class="message-body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam vero deleniti ab beatae nam illo deserunt odio reiciendis error sit, incidunt aliquam nostrum consectetur alias ratione aperiam harum quaerat ipsam?
+        </div>
+      </article>
+      <article class="message is-success">
+        <div class="message-header">
+          <p>Message header</p>
+        </div>
+        <div class="message-body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam vero deleniti ab beatae nam illo deserunt odio reiciendis error sit, incidunt aliquam nostrum consectetur alias ratione aperiam harum quaerat ipsam?
+        </div>
+      </article>
+      <article class="message is-warning">
+        <div class="message-header">
+          <p>Message header</p>
+        </div>
+        <div class="message-body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam vero deleniti ab beatae nam illo deserunt odio reiciendis error sit, incidunt aliquam nostrum consectetur alias ratione aperiam harum quaerat ipsam?
+        </div>
+      </article>
+      <article class="message is-danger">
+        <div class="message-header">
+          <p>Message header</p>
+        </div>
+        <div class="message-body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam vero deleniti ab beatae nam illo deserunt odio reiciendis error sit, incidunt aliquam nostrum consectetur alias ratione aperiam harum quaerat ipsam?
+        </div>
+      </article>
+    </aside>
+<!-- Vertical menu -->
+<aside class="is-block">
+  <aside class="menu">
+    <p class="menu-label">Label 1</p>
+    <ul class="menu-list">
+      <li><a href="">link 1</a></li>
+      <li><a href="">link 2</a></li>
+    </ul>
+    <p class="menu-label">Label 2</p>
+    <ul class="menu-list">
+      <li>
+        <ul>
+          <li><a href="">link 1</a></li>
+          <li><a href="">link 2</a></li>
+          <li><a href="">link 3</a></li>
+        </ul>
+      </li>
+      <li><a href="">link 1 on root</a></li>
+      <li><a href="">link 2 on root</a></li>
+    </ul>
+  </aside>
+</aside>
+<!-- Hero -->
+<aside class="is-block">
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Hero title</h2>
+        <h3 class="subtitle">Hero subtitle</h3>
+      </div>
+    </div>
+  </section>
+  <!-- by temperature -->
+  <section class="hero is-primary">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Hero title</h2>
+        <h3 class="subtitle">Hero subtitle</h3>
+      </div>
+    </div>
+  </section>
+  <section class="hero is-info">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Hero title</h2>
+        <h3 class="subtitle">Hero subtitle</h3>
+      </div>
+    </div>
+  </section>
+  <section class="hero is-warning">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Hero title</h2>
+        <h3 class="subtitle">Hero subtitle</h3>
+      </div>
+    </div>
+  </section>
+  <section class="hero is-danger">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Hero title</h2>
+        <h3 class="subtitle">Hero subtitle</h3>
+      </div>
+    </div>
+  </section>
+  <!-- by size -->
+  <section class="hero is-black is-medium">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Hero title</h2>
+        <h3 class="subtitle">Hero subtitle</h3>
+      </div>
+    </div>
+  </section>
+  <section class="hero is-dark is-bold is-fullheight">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Hero title</h2>
+        <h3 class="subtitle">Hero subtitle</h3>
+      </div>
+    </div>
+  </section>
+  <section class="hero is-danger">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Hero title</h2>
+        <h3 class="subtitle">Hero subtitle</h3>
+      </div>
+    </div>
+  </section>
+</aside>
+ <!-- Card -->
+ <aside class="is-block">
+  <div class="card">
+    <div class="card-content">
+      <p class="title">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    </div>
+    <footer class="card-footer">
+      <p class="card-footer-item">
+        <a href="">
+          <span><i class="fab fa-twitter"></i></span>
+          Twitter
+        </a>
+      </p>
+      <p class="card-footer-item">
+        <a href="">
+          <span><i class="fab fa-facebook"></i></span>
+          Facebook
+        </a>
+      </p>
+    </footer>
+  </div>
+</aside>
+</main>
 </body>
 
 </html>
