[chg] Dashboard Last orders completed

--- a/sesion06/bulma-dashboard/src/index.html
+++ b/sesion06/bulma-dashboard/src/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="columns is-centered">
           <div class="column is-5-tablet is-4-desktop is-3-widescreen">
-            <form class="box" action="">
+            <form class="box" action="dashboard.html">
               <div class="field has-text-centered">
                 <img src="https://via.placeholder.com/150?text=CertificaTIC.com">
               </div>
@@ -44,7 +44,7 @@
                 </label>
               </div>
               <div class="field">
-                <button class="button" type="submit">Login</button>
+                <button class="button is-success" type="submit">Login</button>
               </div>
             </form>
           </div>
