[chg] Modificación del dashboard completo

--- a/sesion06/bulma-dashboard/src/dashboard.html
+++ b/sesion06/bulma-dashboard/src/dashboard.html
@@ -28,7 +28,7 @@
       <div class="navbar-end">
         <div class="navbar-item has-dropdown is-hoverable">
           <div class="navbar-link">
-            Richie Cedillo
+            Ethien Salinas
           </div>
           <div class="navbar-dropdown">
             <a class="navbar-item">
@@ -51,11 +51,11 @@
   <section class="section">
     <!-- main layout -->
     <div class="columns">
-      <!-- left side (menu) -->
+      <!-- left side (say hello) -->
       <div class="column is-4-tablet is-3-desktop is-2-widescreen">
         <aside class="menu">
           <p class="menu-label">Menu</p>
-          <ul class="men-list">
+          <ul class="menu-list">
             <li>
               <a href="dashboard.html">
                 <span class="icon"><i class="fas fa-tachometer-alt"></i></span>
@@ -80,16 +80,17 @@
                 Orders
               </a>
             </li>
+
           </ul>
         </aside>
       </div>
-      <!-- right side (dashboard) -->
-      <div class="column ">
+      <!-- right side (dropdown period) -->
+      <div class="column">
         <div class="level">
           <div class="level-left">
             <h2 class="subtitle">
-              <span class="has-text-grey-light">Hello,</span>
-              <strong>Richie Cedillo</strong>
+              <span class="has-text-grey-light">Hello, </span>
+              <strong>Ethien Salinas</strong>
             </h2>
           </div>
           <div class="level-right">
@@ -100,7 +101,7 @@
                 <option selected>This week</option>
                 <option>This month</option>
                 <option>This year</option>
-                <option>All the time</option>
+                <option>All time</option>
               </select>
             </div>
           </div>
@@ -114,24 +115,81 @@
             </div>
           </div>
           <div class="column is-12-tablet is-6-desktop is-3-widescreen">
-            <div class="notification is-info is-link has-text">
-              <p class="title">$65,224</p>
+            <div class="notification is-info has-text">
+              <p class="title">$33,654</p>
               <p class="subtitle">Revenue</p>
             </div>
           </div>
           <div class="column is-12-tablet is-6-desktop is-3-widescreen">
             <div class="notification is-primary has-text">
-              <p class="title">8,537</p>
+              <p class="title">6,321</p>
               <p class="subtitle">Visitors</p>
             </div>
           </div>
           <div class="column is-12-tablet is-6-desktop is-3-widescreen">
             <div class="notification is-success has-text">
-              <p class="title">369,999</p>
+              <p class="title">369,987</p>
               <p class="subtitle">Pageview</p>
             </div>
           </div>
-          <!-- most loyal -->
+          <!-- last orders -->
+          <div class="column is-12-tablet is-6-desktop is-4-widescreen">
+            <div class="card">
+              <div class="card-content">
+                <h2 class="title is-4">Last orders</h2>
+                <div class="level">
+                  <div class="level-left">
+                    <div>
+                      <p class="title is-6 is-marginless">
+                        <a href="#">765432</a>
+                      </p>
+                      <small>Nov 18, 15:56 by <a href="#">Ethien Salinas</a></small>
+                    </div>
+                  </div>
+                  <div class="level-right">
+                    <div class="has-text-right">
+                      <p class="title is-6 is-marginless">$65.32</p>
+                      <small class="tag is-warning">In progress</small>
+                    </div>
+                  </div>
+                </div>
+                <div class="level">
+                  <div class="level-left">
+                    <div>
+                      <p class="title is-6 is-marginless">
+                        <a href="#">654321</a>
+                      </p>
+                      <small>Nov 18, 15:56 by <a href="#">Ashley Toledo</a></small>
+                    </div>
+                  </div>
+                  <div class="level-right">
+                    <div class="has-text-right">
+                      <p class="title is-6 is-marginless">$65.32</p>
+                      <small class="tag is-success">Success</small>
+                    </div>
+                  </div>
+                </div>
+                <div class="level">
+                  <div class="level-left">
+                    <div>
+                      <p class="title is-6 is-marginless">
+                        <a href="#">987654</a>
+                      </p>
+                      <small>Nov 18, 15:56 by <a href="#">Erick Uribe</a></small>
+                    </div>
+                  </div>
+                  <div class="level-right">
+                    <div class="has-text-right">
+                      <p class="title is-6 is-marginless">$65.32</p>
+                      <small class="tag is-danger">Fail</small>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="button is-link is-outlined">View all orders</a>
+              </div>
+            </div>
+          </div>
+          <!-- most loyal customers -->
           <div class="column is-12-tablet is-6-desktop is-4-widescreen">
             <div class="card">
               <div class="card-content">
@@ -142,87 +200,82 @@
                   </div>
                   <div class="media-content">
                     <p class="title is-5 is-spaced is-marginless">
-                      <a href="#">Emma Stone</a>
+                      <a href="#">Erick Uribe</a>
                     </p>
-                    <p class="subtitle is-6">USA</p>
+                    <p class="subtitle is-6">Brazil</p>
                   </div>
-
-                  <div class="media-right">10 orders</div>
-                </div>
-                <div class="media">
-                  <div class="media-left is-marginless">
-                    <p class="number">1</p>
-                  </div>
-                  <div class="media-content">
-                    <p class="title is-5 is-spaced is-marginless">
-                      <a href="#">Joyce Vázquez</a>
-                    </p>
-                    <p class="subtitle is-6">Francia</p>
-                  </div>
-
                   <div class="media-right">6 orders</div>
                 </div>
                 <div class="media">
                   <div class="media-left is-marginless">
-                    <p class="number">1</p>
+                    <p class="number">2</p>
                   </div>
                   <div class="media-content">
                     <p class="title is-5 is-spaced is-marginless">
-                      <a href="#">Ana de Armas</a>
+                      <a href="#">Karla Uribe</a>
                     </p>
-                    <p class="subtitle is-6">España</p>
+                    <p class="subtitle is-6">Puerto Rico</p>
                   </div>
-
-                  <div class="media-right">7 orders</div>
+                  <div class="media-right">3 orders</div>
                 </div>
-
+                <div class="media">
+                  <div class="media-left is-marginless">
+                    <p class="number">3</p>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-5 is-spaced is-marginless">
+                      <a href="#">Sara Cortés</a>
+                    </p>
+                    <p class="subtitle is-6">Brazil</p>
+                  </div>
+                  <div class="media-right">6 orders</div>
+                </div>
+                <a href="#" class="button is-link is-outlined">View all customers</a>
               </div>
             </div>
           </div>
-          <!-- last orders -->
+          <!-- most popular books -->
           <div class="column is-12-tablet is-6-desktop is-4-widescreen">
             <div class="card">
               <div class="card-content">
-                <h2 class="title is-4">Last orders</h2>
+                <h2 class="title is-4">Most popular books</h2>
+
                 <div class="media">
+                  <div class="media-left is-marginless">
+                    <p class="number">1</p>
+                  </div>
+                  <div class="media-left">
+                    <img src="https://via.placeholder.com/40x60/000000/FFFFFF?text=Book1" alt="book 1">
+                  </div>
                   <div class="media-content">
-                    <p class="title is-5 is-spaced is-marginless"><a href="#">765214</a></p>
-                    <p class="subtitle is-6">Nov 18, 17:38 by
-                      <a href="#">Richie Cedillo</a>
+                    <p class="title is-6 is-marginless">
+                      <a href="#">Vanila JS</a>
                     </p>
                   </div>
-                  <div class="media-right is-marginless has-text-right">
-                    <p class="subtitle is-marginless has-text-right"><strong>$56.98</strong></p>
-                    <span class="tag is-warning">In progress</span>
-                    </div>
-                  </div>
-                  <div class="media">
-                    <div class="media-content">
-                      <p class="title is-5 is-spaced is-marginless"><a href="#">289050</a></p>
-                      <p class="subtitle is-6">Nov 20, 11:45 by
-                        <a href="#">Joyce Vázquez</a>
-                      </p>
-                    </div>
-                    <div class="media-right is-marginless has-text-right">
-                      <p class="subtitle is-marginless"><strong>$56.98</strong></p>
-                      <span class="tag is-success">Succesfull</span>
-                      </div>
-                    </div>
-                    <div class="media">
-                      <div class="media-content">
-                        <p class="title is-5 is-spaced is-marginless"><a href="#">289050</a></p>
-                        <p class="subtitle is-6">Nov 12, 21:57 by
-                          <a href="#">Peter Parker</a>
-                        </p>
-                      </div>
-                      <div class="media-right is-marginless has-text-right">
-                        <p class="subtitle is-marginless"><strong>$56.98</strong></p>
-                        <span class="tag is-danger">Failled</span>
-                        </div>
-                      </div>
-                  </div>
-
+                  <div class="media-right"> 345 sold</div>
                 </div>
+                <div class="media">
+                  <div class="media-left is-marginless"><p class="number">2</p></div>
+                  <div class="media-left"><img src="https://via.placeholder.com/40x60/000000/FFFFFF?text=ES6" alt="book 1"></div>
+                  <div class="media-content">
+                    <p class="title is-6 is-marginless">
+                      <a href="#">ES6</a>
+                    </p>
+                  </div>
+                  <div class="media-right"> 345 sold</div>
+                </div>
+                <div class="media">
+                  <div class="media-left is-marginless"><p class="number">3</p></div>
+                  <div class="media-left"><img src="https://via.placeholder.com/40x60/000000/FFFFFF?text=Bulma" alt="book 3"></div>
+                  <div class="media-content">
+                    <p class="title is-6 is-marginless">
+                      <a href="#">Bulma by example</a>
+                    </p>
+                  </div>
+                  <div class="media-right"> 345 sold</div>
+                </div>
+
+                <a href="#" class="button is-link is-outlined">View all books</a>
               </div>
             </div>
           </div>
