--- a/sesion08/beginning-with-react/src/index.html
+++ b/sesion08/beginning-with-react/src/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Beginning with React</title>
 </head>
 <body>
     <h1>Beginning with React</h1>
+    <nav>
+        <ul>
+          <li><a href="template/1-hello.html">React Hello world</a></li>
+          <li><a href="template/1-hello-jsx.html">React Hello world with JSX</a></li>
+          <li><a href="template/2-class-component.html">Class component</a></li>
+        </ul>
+      </nav>
 </body>
 </html>
