[add] Functional components

--- a/sesion08/beginning-with-react/src/index.html
+++ b/sesion08/beginning-with-react/src/index.html
@@ -13,7 +13,8 @@
         <ul>
           <li><a href="template/1-hello.html">React Hello world</a></li>
           <li><a href="template/1-hello-jsx.html">React Hello world with JSX</a></li>
-          <li><a href="template/2-class-component.html">Class component</a></li>
+          <li><a href="template/2-class-component.html">React Class component</a></li>
+          <li><a href="template/2.1-functional-component.html">React Functional component</a></li>
         </ul>
       </nav>
 </body>
