--- a/sesion08/beginning-with-react/src/index.html
+++ b/sesion08/beginning-with-react/src/index.html
@@ -15,6 +15,7 @@
           <li><a href="template/1-hello-jsx.html">React Hello world with JSX</a></li>
           <li><a href="template/2-class-component.html">React Class component</a></li>
           <li><a href="template/2.1-functional-component.html">React Functional component</a></li>
+          <li><a href="template/3-props.html">Props</a></li>
         </ul>
       </nav>
 </body>
