[add] State and lifecycle

--- a/sesion08/beginning-with-react/src/index.html
+++ b/sesion08/beginning-with-react/src/index.html
@@ -16,6 +16,7 @@
           <li><a href="template/2-class-component.html">React Class component</a></li>
           <li><a href="template/2.1-functional-component.html">React Functional component</a></li>
           <li><a href="template/3-props.html">Props</a></li>
+          <li><a href="template/4-state-and-lifecycle.html">State and Lifecycle</a></li>
         </ul>
       </nav>
 </body>
