[add] State management and conditional rendering

--- a/sesion08/beginning-with-react/src/index.html
+++ b/sesion08/beginning-with-react/src/index.html
@@ -17,6 +17,9 @@
           <li><a href="template/2.1-functional-component.html">React Functional component</a></li>
           <li><a href="template/3-props.html">Props</a></li>
           <li><a href="template/4-state-and-lifecycle.html">State and Lifecycle</a></li>
+          <li><a href="template/5-event-handler.html">Event Listener</a></li>
+          <li><a href="template/6-state-management-challenge.html">State Management challenge</a></li>
+          <li><a href="template/7-conditional-rendering.html">Conditional rendering</a></li>
         </ul>
       </nav>
 </body>
