[add] list-and-keys

--- a/sesion08-09/beginning-with-react/src/index.html
+++ b/sesion08-09/beginning-with-react/src/index.html
@@ -20,6 +20,7 @@
           <li><a href="template/5-event-handler.html">Event Listener</a></li>
           <li><a href="template/6-state-management-challenge.html">State Management challenge</a></li>
           <li><a href="template/7-conditional-rendering.html">Conditional rendering</a></li>
+          <li><a href="template/8-list-and-keys.html">List rendering</a></li>
         </ul>
       </nav>
 </body>
