[add] Remote Calls by Function and Class

--- a/sesion08-09/beginning-with-react/src/index.html
+++ b/sesion08-09/beginning-with-react/src/index.html
@@ -11,16 +11,18 @@
     <h1>Beginning with React</h1>
     <nav>
         <ul>
-          <li><a href="template/1-hello.html">React Hello world</a></li>
-          <li><a href="template/1-hello-jsx.html">React Hello world with JSX</a></li>
-          <li><a href="template/2-class-component.html">React Class component</a></li>
-          <li><a href="template/2.1-functional-component.html">React Functional component</a></li>
-          <li><a href="template/3-props.html">Props</a></li>
-          <li><a href="template/4-state-and-lifecycle.html">State and Lifecycle</a></li>
-          <li><a href="template/5-event-handler.html">Event Listener</a></li>
-          <li><a href="template/6-state-management-challenge.html">State Management challenge</a></li>
-          <li><a href="template/7-conditional-rendering.html">Conditional rendering</a></li>
-          <li><a href="template/8-list-and-keys.html">List rendering</a></li>
+          <li><a href="template/1-hello.html">1 - React Hello world</a></li>
+          <li><a href="template/1-hello-jsx.html">1.1 - React Hello world with JSX</a></li>
+          <li><a href="template/2-class-component.html">2 - Class component</a></li>
+          <li><a href="template/2.1-functional-component.html">2.1 - Functional component</a></li>
+          <li><a href="template/3-props.html">3 - Props</a></li>
+          <li><a href="template/4-state-and-lifecycle.html">4 - State and Lifecycle</a></li>
+          <li><a href="template/6-state-management-challenge.html">4.1 - State Management challenge</a></li>
+          <li><a href="template/5-event-handler.html">5 - Event Listener</a></li>
+          <li><a href="template/7-conditional-rendering.html">6 - Conditional rendering</a></li>
+          <li><a href="template/-list-and-keys.html">7 - List rendering</a></li>
+          <li><a href="template/8-function-remote-call.html">8 - Function Remote call</a></li>
+          <li><a href="template/8.1-function-remote-call.html">8.1 - Class Remote call</a></li>
         </ul>
       </nav>
 </body>
