[add] remote call completed

--- a/sesion08-09/beginning-with-react/src/index.html
+++ b/sesion08-09/beginning-with-react/src/index.html
@@ -20,7 +20,7 @@
           <li><a href="template/6-state-management-challenge.html">4.1 - State Management challenge</a></li>
           <li><a href="template/5-event-handler.html">5 - Event Listener</a></li>
           <li><a href="template/7-conditional-rendering.html">6 - Conditional rendering</a></li>
-          <li><a href="template/-list-and-keys.html">7 - List rendering</a></li>
+          <li><a href="template/8-list-and-keys.html">7 - List rendering</a></li>
           <li><a href="template/8-function-remote-call.html">8 - Function Remote call</a></li>
           <li><a href="template/8.1-function-remote-call.html">8.1 - Class Remote call</a></li>
         </ul>
