--- a/sesion13/vue-hello-world/src/index.html
+++ b/sesion13/vue-hello-world/src/index.html
@@ -15,6 +15,7 @@
       <li><a href="./1-vue-cdn.html">Vue CDN</a></li>
       <li><a href="./2-vue-if.html">Vue IF</a></li>
       <li><a href="./3-vue-for.html">Vue for</a></li>
+      <li><a href="./4-vue-component.html">Vue for</a></li>
     </ul>
   </nav>
 </body>
