[add] vue-methods, vue-challenge y vuex

--- a/sesion13/vue-hello-world/src/index.html
+++ b/sesion13/vue-hello-world/src/index.html
@@ -16,6 +16,9 @@
       <li><a href="./2-vue-if.html">Vue IF</a></li>
       <li><a href="./3-vue-for.html">Vue for</a></li>
       <li><a href="./4-vue-component.html">Vue for</a></li>
+      <li><a href="./5-vue-methods.html">Vue methods</a></li>
+      <li><a href="./6-vue-challenge.html">Vue challenge</a></li>
+      <li><a href="./7-vuex.html">Vuex</a></li>
     </ul>
   </nav>
 </body>
