[add] vue-router.html

--- a/sesion13/vue-hello-world/src/index.html
+++ b/sesion13/vue-hello-world/src/index.html
@@ -19,6 +19,7 @@
       <li><a href="./5-vue-methods.html">Vue methods</a></li>
       <li><a href="./6-vue-challenge.html">Vue challenge</a></li>
       <li><a href="./7-vuex.html">Vuex</a></li>
+      <li><a href="./8-vue-router.html">Vue Router</a></li>
     </ul>
   </nav>
 </body>
