--- a/sesion13/vue-hello-world/src/8-vue-router.html
+++ b/sesion13/vue-hello-world/src/8-vue-router.html
@@ -14,14 +14,11 @@
   <a onclick="window.history.back()">Go back</a>
   <h3>Vue Router</h3>
   <section id="root">
+    <router-link to='/' exact>root</router-link>
+    <router-link to='/dashboard'>dashboard</router-link>
+    <router-link to='/user' exact>user</router-link>
+    <router-link to='/user/3'>user 3</router-link>
     <router-view></router-view>
-    <a href="/8-vue-router.html#/">root</a>
-    <a href="/8-vue-router.html#/dashboard">dashboard</a>
-    <a href="/8-vue-router.html#/user">user</a>
- <!--    <router-link to="/">/</router-link>
-    <router-link to="/dashboard">Dashboard</router-link>
-    <router-link to="/user">User</router-link> -->
-  
 
   </section>
 
@@ -32,13 +29,14 @@
       `
     })
 
-    const DashboardComponent = {template: `<div>📈 Dashboard Component</div>`} //A diferencia de la anterior toma el primer parámetro del nombre de la variable
+    const DashboardComponent = { template: `<div>📈 Dashboard Component</div>` } //A diferencia de la anterior toma el primer parámetro del nombre de la variable
 
-    const UserComponent = {template: `<div>👨🏻‍💻 User Component</div>`}
+    const UserComponent = { template: `<div>👨🏻‍💻 User {{$route.params.id}} Component</div>` }
     const routes = [
       { path: '/', component: RootComponent },
       { path: '/dashboard', component: DashboardComponent },
-      { path: '/user', component: UserComponent }
+      { path: '/user', component: UserComponent },
+      { path: '/user/:id', component: UserComponent }
     ]
     const router = new VueRouter({
       routes
